Create user with ldap
