# lib/units/api/controllers/users.js
@@ -349,12 +349,40 @@ function getUsers(req, res) {
 function createUser(req, res) {
   const email = req.swagger.params.email.value
   const name = req.swagger.params.name.value
+  const password = req.swagger.params.password ? req.swagger.params.password.value : null
 
+  // First, create user in STF database
   dbapi.createUser(email, name, req.user.ip).then(function(stats) {
     if (!stats.inserted) {
       apiutil.respond(res, 403, 'Forbidden (user already exists)')
+      return Promise.resolve()
+    }
+
+    // If LDAP is configured and password provided, create user in LDAP too
+    if (password && req.options.ldap) {
+      const ldaputil = require('../../../util/ldaputil')
+      const username = name || email.split('@')[0] // Use name or email prefix as username
+      
+      return ldaputil.createUser(
+        req.options.ldap,
+        username,
+        name,
+        email,
+        password
+      ).then(function() {
+        apiutil.respond(res, 201, 'Created (user in STF and LDAP)', {
+          user: apiutil.publishUser(stats.changes[0].new_val)
+        })
+      }).catch(function(err) {
+        // Log error but still return success since user was created in STF
+        log.warn('User created in STF but failed to create in LDAP: ' + err.message)
+        apiutil.respond(res, 201, 'Created (user in STF, LDAP creation failed: ' + err.message + ')', {
+          user: apiutil.publishUser(stats.changes[0].new_val)
+        })
+      })
     }
     else {
+      // No password provided or LDAP not configured
       apiutil.respond(res, 201, 'Created (user)', {
         user: apiutil.publishUser(stats.changes[0].new_val)
       })
